--- a/index.html
+++ b/index.html
@@ -4,21 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>03 - Const</title>
+  <title>Document</title>
 </head>
 <body>
   
-  <script>
-    const secretNumber = 28;
-    const will = {
-      name: 'Willian',
-      age: 53
-    }
-    console.log(will);
-
-    will.age = 26;
-
-    console.log(will);console.log(will);
-  </script>
+  <script src="./build.js"></script>
 </body>
 </html>
